--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -51,6 +51,7 @@
                                     <ul id="navigation">
                                         <li><a class="active" href="/">home</a></li>
                                         <li><a href="/about">About Us</a></li>
+                                        <li><a href="/team">Our Team</a></li>
                                         <!-- <li><a href="/package">Package</a></li> -->
                                         <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
@@ -63,9 +64,9 @@
                                                 <li><a href="elemen">elements</a></li>
                                             </ul>
                                         </li> -->
-                                        <li><a href="/support">Support</a></li>
+                                        <li><a href="/support">Support Center</a></li>
 
-                                        <li><a href="/contact">Contact</a></li>
+                                        <li><a href="/contact">Contact Us</a></li>
                                     </ul>
                                 </nav>
                             </div>
