--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -10,31 +10,31 @@
             <div class="row">
                 <div class="col-xl-12">
                     <h3 class="about_title text-center">
-                        We made Cloud Computing <br>
-                        More Easier
+                        We make access to the internet <br>
+                        easier than ever!
                     </h3>
                 </div>
             </div>
             <div class="row mb-60">
                 <div class="col-xl-6">
-                    <p>For light wherein fly their he blessed seed behold fourth moveth face moving. Dry for also subdue
-                        dominion creepeth the may over fish very greater sixth to fill. Cattle you god heaven above
-                        moveth, night. There fruitful upon from fowl, that she’d day man unto that have all herb whose
-                        our void evening after under. You’ll sea wherein sea fruitful fill from.</p>
+                    <p>Our Vision? A Ghana where people and businesses 
+                    experience true and uninterrupted internet connection and the possibilities it brings.</p>
                 </div>
                 <div class="col-xl-6">
-                    <p>Dry for also subdue dominion creepeth the may over fish very greater sixth to fill. Cattle you
-                        god heaven above moveth, night. There fruitful upon from fowl, that she’d day man unto that have
-                        all herb whose our void evening after under. You’ll sea wherein sea fruitful fill from.</p>
+                    <p>Our Values? We belive in doing it passionately or not at all. 
+                    For us, doing is not good enough, we need to wow at each opportunity. 
+                    And when it comes to customer service, our Minimum is the industry's Maximum!
+                    We believe in fulfilling our promises. If we say we'll do it,
+                     we are committed to make it happen</p>
                 </div>
             </div>
             <div class="row justify-content-between">
                 <div class="col-xl-3">
                     <div class="about_info">
-                        <h3>2010</h3>
-                        <p>Cattle you god heaven above moveth, night. There fruitful upon from fowl, that she’d day man
-                            unto that have all herb whose our void evening after under. You’ll sea wherein sea fruitful
-                            fill from.
+                        <h3>2011</h3>
+                        <p> Horizon Limited was established in 2011 to provide premium quality
+                             wireless broadband connectivity to the Ghanaian market. The National Communications
+                            Authority (NCA) awarded Horizon a Broadband Wireless Access (BWA) license the following year.
 
                         </p>
                     </div>
@@ -42,16 +42,20 @@
                 <div class="col-xl-3">
                     <div class="about_info">
                         <h3>2015</h3>
-                        <p>Above creeping bearing, lights earth hath day, may them good, darkness. Shall. From for given
-                            male from place created stars signs fowl bearing there were him so subdue greater herb.
+                        <p>Horizon launched to immediately become the first 
+                            4G LTE company in Ghana and leading single largest LTE ever 
+                            deployed in Sub-Saharan Africa with world class strategic 
+                            partners such as IBM, Alcatel Lucent, Microsoft and Huawei. 
                         </p>
                     </div>
                 </div>
                 <div class="col-xl-3">
                     <div class="about_info">
                         <h3>2018</h3>
-                        <p>From for given male from place created stars signs fowl bearing there were him so subdue
-                            greater herb. Creature thing great male give cattle.</p>
+                        <p>Horizon has built a Long Term Evolution (LTE) network, 
+                            which is commonly referred to as the only true 4G. 
+                            LTE is a relatively new technology, which was only recently adopted in mega-cities such as London.
+                             There are only a handful of LTE providers in Africa and it's Horizon's goal to lead the pack.</p>
                     </div>
                 </div>
             </div>
@@ -71,13 +75,15 @@
                         <div class="col-xl-6">
                             <div class="about_wrap_text_1">
                                 <h3>
-                                    Committed to WordPress
+                                    Unleash your business
                                 </h3>
-                                <p>Above creeping bearing, lights earth hath day, may them good, darkness. Shall. From for given
-                                    male from place created stars signs fowl bearing there were him so subdue greater herb.
-                                    Creature thing great male give cattle is Cattle you god heaven above moveth, night. There
-                                    fruitful upon from fowl, that she’d day man unto that have all herb whose our void evening
-                                    after under. You’ll sea </p>
+                                <p>Horizon Business offer is your preferred partner in achieving your goals with our 
+                                    selection of tailored solutions that keep you ahead of competition.
+                                    At Horizon, you have the freedom to choose
+                                    your most preferred solutuions to best fit, your Small
+                                     Office Home Office (SOHO), Small, Medium, or large
+                                    Enterprise with well-defined service level agreements </p>
+
                             </div>
                         </div>
                     </div>
@@ -85,13 +91,10 @@
                         <div class="col-xl-6">
                             <div class="about_wrap_text_1">
                                 <h3>
-                                    Contributing to Open Source
+                                    Great Customer Support with Sophisticated network.
                                 </h3>
-                                <p>Above creeping bearing, lights earth hath day, may them good, darkness. Shall. From for given
-                                    male from place created stars signs fowl bearing there were him so subdue greater herb.
-                                    Creature thing great male give cattle is Cattle you god heaven above moveth, night. There
-                                    fruitful upon from fowl, that she’d day man unto that have all herb whose our void evening
-                                    after under. You’ll sea </p>
+                                <p>We take advantage of the best available billing and 
+                                    networking for the purpose of giving you the best support in case of downtimes and emergencies.</p>
                             </div>
                         </div>
                         <div class="col-xl-6">
@@ -112,20 +115,20 @@
             <div class="row">
                 <div class="col-xl-4 col-md-4">
                     <div class="single_box">
-                        <h3>278390</h3>
-                        <p>Client around the World</p>
+                        <h3>2000</h3>
+                        <p>Clients all over Ghana</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
                     <div class="single_box">
-                        <h3>200</h3>
+                        <h3>100</h3>
                         <p>Dedicated team</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
                     <div class="single_box">
-                        <h3>563278</h3>
-                        <p>Domain registation</p>
+                        <h3>99.99%</h3>
+                        <p>Safe and Secured</p>
                     </div>
                 </div>
             </div>
