--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -40,13 +40,13 @@
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                service
+                                Services
                             </h3>
                             <ul>
-                                <li><a href="#">Hosting</a></li>
-                                <li><a href="#">Domain</a></li>
-                                <li><a href="#">Wordpress</a></li>
-                                <li><a href="#">Shared Hosting</a></li>
+                                <li><a href="#">Fiber Internet Connection</a></li>
+                                <li><a href="#">Radio Internet Connect</a></li>
+                                <li><a href="#">Consultation</a></li>
+                                <li><a href="#">Intermediate Vendor</a></li>
                             </ul>
 
                         </div>
