--- a/views/elements.html
+++ b/views/elements.html
@@ -92,7 +92,7 @@
 			</div>
 		</header>
 		<!-- header-end -->
-	
+
 		<!-- bradcam_area_start -->
 		<div class="bradcam_area breadcam_bg overlay2">
 				<h3>Elements</h3>
@@ -783,7 +783,7 @@
 												</li>
 											</ul>
 										</div>
-	
+
 							</div>
 						</div>
 						<div class="col-xl-3 col-md-6 col-lg-3">
@@ -797,7 +797,7 @@
 									<li><a href="#">Wordpress</a></li>
 									<li><a href="#">Shared Hosting</a></li>
 								</ul>
-	
+
 							</div>
 						</div>
 						<div class="col-xl-2 col-md-6 col-lg-2">
@@ -845,7 +845,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</footer>
 		<!-- footer -->
 		<!-- link that opens popup -->
-	
+
 		<!-- form itself end-->
 		<form id="test-form" class="white-popup-block mfp-hide">
 			<div class="popup_box ">
@@ -862,7 +862,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<input type="email" placeholder="Enter email">
 							</div>
 							<div class="col-xl-12 col-md-12">
-								<input type="password" placeholder="Password">
+								<input type="password" autocomplete = "off" placeholder="Password">
 							</div>
 							<div class="col-xl-12">
 								<button type="submit" class="boxed_btn_green">Sign in</button>
@@ -874,7 +874,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</form>
 		<!-- form itself end -->
-	
+
 		<!-- form itself end-->
 		<form id="test-form2" class="white-popup-block mfp-hide">
 			<div class="popup_box ">
@@ -891,10 +891,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<input type="email" placeholder="Enter email">
 							</div>
 							<div class="col-xl-12 col-md-12">
-								<input type="password" placeholder="Password">
+								<input type="password" autocomplete = "off" placeholder="Password">
 							</div>
 							<div class="col-xl-12 col-md-12">
-								<input type="Password" placeholder="Confirm password">
+								<input type="password" autocomplete = "off" placeholder="Confirm password">
 							</div>
 							<div class="col-xl-12">
 								<button type="submit" class="boxed_btn_green">Sign Up</button>
