--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -113,7 +113,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>  Made
                             <input type="email" placeholder="Enter email">
                         </div>
                         <div class="col-xl-12 col-md-12">
-                            <input type="password" placeholder="Password">
+                            <input type="password" autocomplete = "off" placeholder="Password">
                         </div>
                         <div class="col-xl-12">
                             <button type="submit" class="boxed_btn_green">Sign in</button>
@@ -143,10 +143,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>  Made
                             <input type="email" placeholder="Enter email" name="email">
                         </div>
                         <div class="col-xl-12 col-md-12">
-                            <input type="password" placeholder="Password" name="password">
+                            <input type="password" autocomplete = "off" placeholder="Password" name="password">
                         </div>
                         <div class="col-xl-12 col-md-12">
-                            <input type="Password" placeholder="Confirm password" name="password2">
+                            <input type="password" autocomplete = "off" placeholder="Confirm password" name="password2">
                         </div>
                         <div class="col-xl-12">
                             <button type="submit" class="boxed_btn_green">Sign Up</button>
