--- a/views/single-blog.handlebars
+++ b/views/single-blog.handlebars
@@ -529,7 +529,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                              <input type="email" placeholder="Enter email">
                          </div>
                          <div class="col-xl-12 col-md-12">
-                             <input type="password" placeholder="Password">
+                             <input type="password" autocomplete = "off" placeholder="Password">
                          </div>
                          <div class="col-xl-12">
                              <button type="submit" class="boxed_btn_green">Sign in</button>
@@ -558,10 +558,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                              <input type="email" placeholder="Enter email">
                          </div>
                          <div class="col-xl-12 col-md-12">
-                             <input type="password" placeholder="Password">
+                             <input type="password" autocomplete = "off" placeholder="Password">
                          </div>
                          <div class="col-xl-12 col-md-12">
-                             <input type="Password" placeholder="Confirm password">
+                             <input type="password" autocomplete = "off" placeholder="Confirm password">
                          </div>
                          <div class="col-xl-12">
                              <button type="submit" class="boxed_btn_green">Sign Up</button>
