--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,14 +8,10 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-9">
                         <div class="slider_text text-center">
-                            <p>The Best Domain & Hosting Provider In The Area</p>
-                            <h3>Go Big with your next Domain</h3>
-                            <div class="find_dowmain">
-                                <form action="#" class="find_dowmain_form">
-                                    <input type="text" placeholder="Find your domain">
-                                    <button type="submit">search</button>
-                                </form>
-                            </div>
+                            <p>Welcome to Horizon, 
+                                your new favorite Internet Service Provider in Ghana</p>
+                            <h3>Unleash Possibilities with the best Internet Service</h3>
+                    
                         </div>
                     </div>
                 </div>
@@ -31,10 +27,11 @@
                 <div class="col-xl-12">
                     <div class="section_title text-center mb-100">
                         <h3>
-                            Choose your Hosting Plan
+                            Choose your Unlimited Internet Plan
                         </h3>
-                        <p>Your domain control panel is designed for ease-of-use and <br>
-                            allows for all aspects of your domains.
+                        <p>We have the most affordable and convenient offers
+                             available for monthly purchases for all 
+                             sorts of ventures and necessities.
                         </p>
                     </div>
                 </div>
@@ -45,9 +42,9 @@
                         <div class="prising_icon blue">
                             <i class="flaticon-servers"></i>
                         </div>
-                        <h3>Share Hosting</h3>
-                        <p class="prising_text">Easy drag and drop fully customizable mobile friendly</p>
-                        <p class="prise">Start from <span>$2.5/m</span></p>
+                        <h3>Sonic</h3>
+                        <p class="prising_text">Typically for large families who consume a lot of data. </p>
+                        <p class="prise">8mbps for <span>GHS2150</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -56,9 +53,9 @@
                         <div class="prising_icon lite_blue">
                             <i class="flaticon-hosting"></i>
                         </div>
-                        <h3>VPS Hosting</h3>
-                        <p class="prising_text">Easy drag and drop fully customizable mobile friendly</p>
-                        <p class="prise">Start from <span>$2.5/m</span></p>
+                        <h3>Supersonic</h3>
+                        <p class="prising_text">This offer is for small businesess</p>
+                        <p class="prise">20mbps for <span>GHS3850</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -67,9 +64,9 @@
                         <div class="prising_icon pink">
                             <i class="flaticon-wordpress"></i>
                         </div>
-                        <h3>Wordpress Hosting</h3>
-                        <p class="prising_text">Easy drag and drop fully customizable mobile friendly</p>
-                        <p class="prise">Start from <span>$2.5/m</span></p>
+                        <h3>Ultrasonic</h3>
+                        <p class="prising_text">Typically for medium sized businesses</p>
+                        <p class="prise">45mbps for <span>GHS7750</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -78,9 +75,9 @@
                         <div class="prising_icon yellow">
                             <i class="flaticon-servers-1"></i>
                         </div>
-                        <h3>Dedicated Hosting</h3>
-                        <p class="prising_text">Easy drag and drop fully customizable mobile friendly</p>
-                        <p class="prise">Start from <span>$2.5/m</span></p>
+                        <h3>Super Ultrasonic</h3>
+                        <p class="prising_text">This offer is the choice of large businesses and organizations. </p>
+                        <p class="prise">65mbps for <span>GHS8350</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -96,7 +93,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-md-6">
                         <div class="featuures_heading">
-                            <h3>Core Features</h3>
+                            <h3>Why choose Horizon? </h3>
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-6">
@@ -105,10 +102,10 @@
                                 <div class="nav" id="nav-tab" role="tablist">
                                     <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab"
                                         href="#nav-home" role="tab" aria-controls="nav-home"
-                                        aria-selected="true">Features</a>
+                                        aria-selected="true">Know</a>
                                     <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab"
                                         href="#nav-profile" role="tab" aria-controls="nav-profile"
-                                        aria-selected="false">Advanced Features</a>
+                                        aria-selected="false">Understand</a>
                                 </div>
                             </nav>
                         </div>
@@ -126,10 +123,10 @@
                                         <div class="icon"><i class="flaticon-browser"></i></div>
                                         <div class="features_info">
                                             <h4>
-                                                Free Domain for 1st Year
+                                                Availability
                                             </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
+                                            <p>We pride ourselves in our ability 
+                                                to offer a wide coverage for internet service  </p>
                                         </div>
                                     </div>
                                 </div>
@@ -138,44 +135,25 @@
                                         <div class="icon blue"><i class="flaticon-security"></i></div>
                                         <div class="features_info">
                                             <h4>
-                                                Free SSL Certificate
+                                                Reliability
                                             </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
+                                            <p>Our services are fully reliable. We 
+                                             offer risk reliance strategies that cater 
+                                             unforeseen issues.
+                                              
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-6">
-                                    <div class="single_features">
-                                        <div class="icon pink"><i class="flaticon-like"></i></div>
-                                        <div class="features_info">
-                                            <h4>
-                                                30-Day Money-Back Guarantee
-                                            </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-6">
-                                    <div class="single_features">
-                                        <div class="icon yellow"><i class="flaticon-lock"></i></div>
-                                        <div class="features_info">
-                                            <h4>
-                                                Spam Protection
-                                            </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
-                                        </div>
-                                    </div>
-                                </div>
+                                
+                                
                             </div>
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                             <div class="row">
                                 <div class="col-xl-6">
                                     <div class="single_features">
-                                        <div class="icon"><i class="flaticon-browser"></i></div>
+                                        <div class="icon"><i class="flaticon-like"></i></div>
                                         <div class="features_info">
                                             <h4>
                                                 Free Domain for 1st Year
@@ -187,7 +165,7 @@
                                 </div>
                                 <div class="col-xl-6">
                                     <div class="single_features">
-                                        <div class="icon blue"><i class="flaticon-security"></i></div>
+                                        <div class="icon blue"><i class="flaticon-lock"></i></div>
                                         <div class="features_info">
                                             <h4>
                                                 Free SSL Certificate
@@ -241,7 +219,7 @@
                             moving. Moving in fourth air night bring upon you’re it beast.</p>
                         <div class="get_started">
                             <a class="boxed_btn_green" href="#">
-                                <span>Get Start Now</span>
+                                <span>Get Started Now</span>
                             </a>
                             <a href="#" class="phone_num">
                                 +233 548 769 251
